menu jump fixed

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -796,7 +796,7 @@ p {
     font-size: 2em;
     font-weight: 300;
     line-height: 50%;
-    padding: 0 5%;
+    padding: 0 30px;
     transition: opacity 0.3s ease;
 }
 
